<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"


    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:measureWithLargestChild="false"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/number"
            android:id="@+id/textView4"
            android:textSize="30dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText3"
            android:textSize="50dp"
            android:layout_gravity="center_horizontal"
            android:background="#ffffff"
            android:inputType="number"
            android:layout_marginTop="15dp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/option"
            android:id="@+id/textView5"
            android:textSize="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp" />

        <EditText
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText4"
            android:textSize="50dp"
            android:layout_gravity="center_horizontal"
            android:background="#ffffff"
            android:inputType="number"
            android:layout_marginTop="15dp"
            android:textAlignment="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</RadioGroup>